sort.basic.cocktail.AlgCocktailSort2.scala.error
Erreur de compilation :
AlgCocktailSort2:2: error: '=' expected but integer literal found.
def cocktailSort()2 {
                  ^AlgCocktailSort2:27: error: illegal start of simple expression
}
^